add_executable(sixsV1.0B AATSR.f ABSTRA.f AEROSO.f AKTOOL.f ATMREF.f AVHRR.f
               BBM.f BDM.f BRDFGRID.f CHAND.f CLEARW.f CSALBR.f DICA1.f
               DICA2.f DICA3.f DISCOM.f DISCRE.f DUST.f ENVIRO.f EQUIVWL.f
               GAUSS.f GLI.f GOES.f HAPKALBE.f HAPKBRDF.f HRV.f IAPIALBE.f
               IAPIBRDF.f IAPITOOLS.f INTERP.f ISO.f KERNEL.f KERNELPOL.f
               LAKEW.f MAS.f MERIS.f METEO.f METH1.f METH2.f METH3.f METH4.f
               METH5.f METH6.f MIDSUM.f MIDWIN.f MIE.f MINNALBE.f MINNBRDF.f
               MOCA1.f MOCA2.f MOCA3.f MOCA4.f MOCA5.f MOCA6.f MODIS.f MSS.f
               NIOX1.f MODISBRDF.f MODISALBE.f NIOX2.f NIOX3.f NIOX4.f NIOX5.f
               NIOX6.f OCEA.f OCEAALBE.f OCEABRDF.f OCEABRDFFAST.f OCEATOOLS.f
               ODA550.f ODRAYL.f OS.f OSPOL.f OXYG3.f OXYG4.f OXYG5.f OXYG6.f
               OZON1.f PLANPOL.f POLDER.f POSGE.f POSGW.f POSLAN.f POSMTO.f
               POSNOA.f POSSOL.f POSSPO.f POLGLIT.f POLNAD.f PRESPLANE.f
               PRESSURE.f PRINT_ERROR.f RAHMALBE.f RAHMBRDF.f ROUJALBE.f
               ROUJBRDF.f SAND.f SCATRA.f SEAWIFS.f SOLIRR.f SOOT.f
               SPECINTERP.f SPLIE2.f SPLIN2.f SPLINE.f SPLINT.f STM.f SUBSUM.f
               SUBWIN.f TM.f TROPIC.f TRUNCA.f US62.f VARSOL.f VEGETA.f
               VERSALBE.f VERSBRDF.f VERSTOOLS.f WALTALBE.f WALTBRDF.f WATE.f
               WAVA1.f WAVA2.f WAVA3.f WAVA4.f WAVA5.f WAVA6.f AEROPROF.f
               main.f)
install(TARGETS sixsV1.0B DESTINATION bin)

add_subdirectory(test)
